# scarlet

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yaml
src/: ai.rs  chunk.rs  cli.rs  common.rs  compiler.rs  debug.rs  error.rs  heap.rs  lib.rs  log.rs  main.rs  native_fns.rs  scanner.rs  trace.rs  vm.rs
