[package]
name = "scarlet"
version = "0.2.0"
edition = "2024"
description = "Scarlet is a dynamically typed, object-oriented, garbage-collected, bytecode-interpreted programming language written in Rust"
documentation = "https://github.com/lovelindhoni/scarlet"
readme = "README.md"
homepage = "https://github.com/lovelindhoni/scarlet"
repository = "https://github.com/lovelindhoni/scarlet"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[lib]
crate-type = ["cdylib"]
name = "scarlet"

[[bin]]
name = "scarlet"
path = "src/main.rs"

[dependencies]
rapidhash = "4.4.1"
slotmap = "1.1.1"
thiserror = "2.0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
argh = "0.1.19"
tokio = { version = "1", features = ["rt"] }
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = ["console"] }

[profile.release]
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1
